--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/RAK-EGA/service-Backend.git"
+    "url": ""
   },
   "author": "",
   "license": "ISC",
