--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -33,7 +33,7 @@ on:
 env:
   AWS_REGION: me-south-1                   # set this to your preferred AWS region, e.g. us-west-1
   ECR_REPOSITORY: backend           # set this to your Amazon ECR repository name
-  ECS_SERVICE: service-backend-service-v1000000                 # set this to your Amazon ECS service name
+  ECS_SERVICE: service-service                 # set this to your Amazon ECS service name
   ECS_CLUSTER: serviceCluster                 # set this to your Amazon ECS cluster name
   ECS_TASK_DEFINITION: "serviceTask-revision19.json" # set this to the path to your Amazon ECS task definition
                                                # file, e.g. .aws/task-definition.json
