--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -33,11 +33,11 @@ on:
 env:
   AWS_REGION: me-south-1                   # set this to your preferred AWS region, e.g. us-west-1
   ECR_REPOSITORY: backend           # set this to your Amazon ECR repository name
-  ECS_SERVICE: service-service-v3                 # set this to your Amazon ECS service name
+  ECS_SERVICE: service-10                 # set this to your Amazon ECS service name
   ECS_CLUSTER: serviceCluster                 # set this to your Amazon ECS cluster name
   ECS_TASK_DEFINITION: "serviceTask-revision33.json" # set this to the path to your Amazon ECS task definition
                                                # file, e.g. .aws/task-definition.json
-  CONTAINER_NAME: service-backend          # set this to the name of the container in the
+  CONTAINER_NAME: service-backend         # set this to the name of the container in the
                                                # containerDefinitions section of your task definition
 
 permissions:
