--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "lawgs": "^1.0.4",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.3",
     "node-cron": "^3.0.3",
