--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "lawgs": "^1.0.4",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.3",
     "node-cron": "^3.0.3",
@@ -32,5 +31,8 @@
     "swagger-autogen": "^2.23.7",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0"
+  },
+  "devDependencies": {
+    "mocha": "^10.2.0"
   }
 }
