--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "nodemon --experimental-modules --es-module-specifier-resolution=node app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "cross-env NODE_ENV=test mocha --exit"
   },
   "repository": {
     "type": "git",
@@ -24,6 +24,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "lawgs": "^1.0.4",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.3",
     "node-cron": "^3.0.3",
@@ -33,6 +34,11 @@
     "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
-    "mocha": "^10.2.0"
+    "chai": "^4.4.1",
+    "chai-http": "^4.3.0",
+    "cross-env": "^7.0.3",
+    "mocha": "^10.2.0",
+    "sinon": "^17.0.1",
+    "supertest": "^6.3.4"
   }
 }
